--- a/style/bicolore_sans_menu.css
+++ b/style/bicolore_sans_menu.css
@@ -33,6 +33,8 @@ color: #000000;
 border-bottom: solid;
 border-left: solid;
 -moz-border-radius: 10px;
+border-radius: 10px;
+-webkit-border-radius: 10px;
 }
 
 h3 {
@@ -43,6 +45,8 @@ color: #000000;
 border-bottom: solid;
 border-left: solid;
 -moz-border-radius: 12px;
+border-radius: 12px;
+-webkit-border-radius: 12px;
 }
 
 div#chapeau {
@@ -52,13 +56,18 @@ padding: 0;
 height: 50px;
 width: 78%;
 top: 0;
+left: 1%;
 background-color: #000000;
 color: #ffffff;
 text-align: center;
 font-size: 120%;
 line-height: 15%;
 -moz-border-radius-bottomright: 25px;
+border-bottom-left-radius: 25px;
+-webkit-border-radius-bottomright: 25px;
 -moz-border-radius-bottomleft: 25px;
+border-bottom-right-radius: 25px;
+-webkit-border-radius-bottomleft: 25px;
 }
 
 div#chapeau h1 {
@@ -85,7 +94,11 @@ margin: 0 5px 10px 5px;
 float: left;
 border: thin solid #000000;
 -moz-border-radius: 15px;
+border-radius: 15px;
+-webkit-border-radius: 15px;
 -moz-box-shadow: 1px 1px 8px #000000;
+box-shadow: 1px 1px 8px #000000;
+-webkit-box-shadow: 1px 1px 8px #000000;
 overflow: hidden;
 }
 
@@ -123,16 +136,24 @@ right: 0;
 background-color: #000000;
 color: #ffffff;
 -moz-border-radius-topleft: 25px;
+border-top-left-radius: 25px;
+-webkit-border-radius-topleft: 25px;
 -moz-border-radius-bottomleft: 25px;
+border-bottom-left-radius: 25px;
+-webkit-border-radius-bottomleft: 25px;
 overflow: hidden;
 }
 
 div#cartable h3 {
 width: 90%;
-border-color: #ffffff;
-border: ;
 color: #ffffff;
 text-align: center;
+border-bottom: solid;
+border-left: solid;
+-moz-border-radius: 12px;
+border-radius: 12px;
+-webkit-border-radius: 12px;
+border-color: #ffffff;
 }
 
 div#cartable a:link {
