--- a/style/bicolore_sans_menu.css
+++ b/style/bicolore_sans_menu.css
@@ -1,7 +1,8 @@
 html, body {
 height: 100%;
-width: 100%;
-margin: 0;
+width: 80%;
+min-width: 300px;
+margin: 0 10%;
 padding: 0;
 background-color: #ffffff;
 color: #000000;
