--- a/style/avec_menu.css
+++ b/style/avec_menu.css
@@ -74,8 +74,10 @@ width: 78%;
 left: 2%;
 }
 
-div#corps div.ensemble_element {
+div#corps ul.ensemble_element {
 min-height: 10em;
+list-style-type: none;
+padding: 0 5px;
 }
 
 div#corps a.cadre {
@@ -162,4 +164,8 @@ margin: 0;
 padding: 0;
 font-size: 10px;
 text-align: center;
+}
+
+.cache_cache {
+display: none;
 }
