--- a/style/sans_menu.css
+++ b/style/sans_menu.css
@@ -52,7 +52,7 @@ border-radius: 12px;
 }
 
 /* ENTÊTE DE PAGE */
-#chapeau {
+header {
 position: relative;
 margin: 0 auto;
 padding: 0;
@@ -71,7 +71,7 @@ border-bottom-right-radius: 25px;
 -webkit-border-radius-bottomleft: 25px;
 }
 
-#chapeau h1 {
+header h1 {
 margin: 0;
 padding: 0;
 height: 50px;
@@ -132,7 +132,7 @@ clear: both;
 }
 
 /* MENU */
-#cartable {
+aside#cartable {
 position: absolute;
 height: auto;
 width: 20%;
@@ -147,7 +147,7 @@ border-bottom-left-radius: 25px;
 overflow: hidden;
 }
 
-#cartable h3 {
+aside#cartable h3 {
 width: 90%;
 text-align: center;
 border-bottom: solid;
@@ -157,18 +157,18 @@ border-radius: 12px;
 -webkit-border-radius: 12px;
 }
 
-#cartable a:link {
+aside#cartable a:link {
 text-decoration: underline;
 }
 
-#cartable a:visited {
+aside#cartable a:visited {
 }
 
-#cartable a:hover {
+aside#cartable a:hover {
 }
 
 /* ENQUEUE DE PAGE */
-#soulier {
+footer {
 position: relative;
 top: 5px;
 right: 5px;
@@ -176,7 +176,7 @@ height: 20px;
 width: 98%;
 }
 
-#soulier p {
+footer p {
 margin: 0;
 padding: 0;
 font-size: 10px;
