--- a/style/blue.css
+++ b/style/blue.css
@@ -1,5 +1,5 @@
 /*
-Theme: PorteAil - apparence bleue
+Theme: PorteAil - Blue appearance
 Version: 0.1
 Author: Olivier DOSSMANN
 Author URI: http://olivier.dossmann.net
@@ -33,13 +33,13 @@ h3 {
 color: #555577;
 }
 
-/* ENTÊTE DE PAGE */
+/* HEADER */
 header {
 background-color: #223355;
 color: #ffffff;
 }
-/* CONTENU */
-/* survol d'un élément */
+/* CONTENT */
+/* element overview */
 #corps a.cadre:hover {
 background-color: #223355;
 color: #ffffff;
@@ -69,7 +69,7 @@ background-color: #aaaabb;
 color: #223355;
 }
 
-/* ENQUEUE DE PAGE */
+/* FOOTER */
 footer {
 color: #000000;
 }
