--- a/style/without_menu.css
+++ b/style/without_menu.css
@@ -1,5 +1,5 @@
 /*
-Theme: PorteAil - sans menu
+Theme: PorteAil - without menu
 Version: 0.1
 Author: Olivier DOSSMANN
 Author URI: http://olivier.dossmann.net
@@ -51,7 +51,7 @@ border-radius: 12px;
 -webkit-border-radius: 12px;
 }
 
-/* ENTÊTE DE PAGE */
+/* HEADER */
 header {
 position: relative;
 margin: 0 auto;
@@ -78,14 +78,14 @@ height: 50px;
 line-height: 50px;
 }
 
-/* CONTENU */
+/* CONTENT */
 #corps {
 position: relative;
 width: 98%;
 left: 2%;
 }
 
-/* CATÉGORIES*/
+/* CATEGORIES*/
 #corps ul.ensemble_element {
 min-height: 10em;
 list-style-type: none;
@@ -97,7 +97,7 @@ text-align: center;
 display: inline-block;
 }
 
-/* ÉLÉMENT */
+/* ELEMENT */
 #corps a.cadre {
 height: 9em;
 width: 11em;
@@ -131,7 +131,7 @@ margin-left: auto;
 border: 0;
 }
 
-/* espace en fin de catégorie */
+/* WHITESPACE at category's end */
 #corps .espace {
 clear: both;
 }
@@ -172,7 +172,7 @@ nav#cartable a:visited {
 nav#cartable a:hover {
 }
 
-/* ENQUEUE DE PAGE */
+/* FOOTER */
 footer {
 position: relative;
 top: 5px;
@@ -188,4 +188,4 @@ font-size: 10px;
 text-align: center;
 }
 
-/* DIVERS */
+/* MISCELLANEOUS */
