--- a/style/blue.css
+++ b/style/blue.css
@@ -4,7 +4,7 @@ Version: 0.1
 Author: Olivier DOSSMANN
 Author URI: http://olivier.dossmann.net
 Project: PorteAil
-Project URI: http://porteail.e-mergence.org
+Project URI: http://porteail.depotoi.re
  */
 html, body {
 background-color: #e9ecf4;
