[UP] To 0.3.1 version

--- a/style/black.css
+++ b/style/black.css
@@ -4,7 +4,7 @@ Version: 0.1
 Author: Olivier DOSSMANN
 Author URI: http://olivier.dossmann.net
 Project: PorteAil
-Project URI: http://porteail.depotoi.re
+Project URI: http://github.com/blankoworld/porteail.git
  */
 html, body {
 background-color: #ffffff;
